update javafx start note